libs/extractor/src/snapshots/extractor__tests__extract_same_value_conditional_style_props-6.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={a === b ? `${`1`}px` : `${\"1\"}px`} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "1px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment51) => <div className={__devupAssignment51?.[0] ?? \"\"} style={{ ...__devupAssignment51?.[1] }} />)(a === b ? ((__devupValue) => [\n\t\"OLmargin-v1px\",\n\t{},\n\t__devupValue\n])(`${`1`}px`) : ((__devupValue) => [\n\t\"OLmargin-v1px\",\n\t{},\n\t__devupValue\n])(`${\"1\"}px`));\n",
}
