libs/extractor/src/snapshots/extractor__tests__extract_selector-14.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box selectors={{\n          \"& .a, & .b\": {\n            bg: \"$primary\"\n          }\n        }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$primary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .a",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$primary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .b",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"OHcd_ncpel3nhovygc OHco_ytwwcu7rd90_1\" />;\n",
}
